--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     sourceSets {
-        main.java.srcDirs += 'LSTFilter/src'
+        main.java.srcDirs += 'LSTFilter/src/'
     }
 }
 
