Update for Contextual Abstractions work.  Includes PacoLib, PacoEngine with Cabstractions, lstfilter receiver for remote app access

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,11 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name="com.ut.mpc.lstrtree.LocationPoll"
-            android:exported="false" />
+        <receiver android:name=".lstrtree.LSTIndexReceiver" >
+            <intent-filter>
+                <action android:name="com.ut.mpc.lstindex" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
