--- a/contextengine/build.gradle
+++ b/contextengine/build.gradle
@@ -37,5 +37,6 @@ retrolambda {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile project(':pacolib')
 }
