--- a/demoapp1/build.gradle
+++ b/demoapp1/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile project(':pacolib')
 }
