--- a/pacolib/build.gradle
+++ b/pacolib/build.gradle
@@ -27,4 +27,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
 }
+
+
