--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
 
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.loopj.android:android-async-http:1.4.8'
+    compile 'com.google.android.gms:play-services-ads:6.5.87'
+    compile 'com.google.android.gms:play-services-identity:6.5.87'
 }
 
